--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "biome check"
+		"lint": "biome check",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.2",
@@ -27,6 +28,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.7",
+		"husky": "^9.1.7",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
