--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
 		"prepare": "[ \"$VERCEL\" != \"1\" ] && husky install || echo \"Skipping husky install\""
 	},
 	"workspaces": {
-		"packages": ["apps/*", "services/*", "packages/*"],
+		"packages": [
+			"apps/*",
+			"services/*",
+			"packages/*"
+		],
 		"nohoist": [
 			"**/cbw-sdk",
 			"**/cbw-sdk/**",
@@ -36,5 +40,7 @@
 			"**/pino-pretty/**"
 		]
 	},
-	"dependencies": {}
+	"dependencies": {
+		"@creit.tech/stellar-wallets-kit": "^1.7.3"
+	}
 }
