feat(proposals): add proposal calendar component

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "Harmonia DAO Management",
 	"version": "0.0.1",
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "1.9.4",
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
 		"@types/bun": "latest",
@@ -30,11 +30,7 @@
 		"contracts:test": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" cargo test --target wasm32-unknown-unknown"
 	},
 	"workspaces": {
-		"packages": [
-			"apps/*",
-			"services/*",
-			"packages/*"
-		],
+		"packages": ["apps/*", "services/*", "packages/*"],
 		"nohoist": [
 			"**/cbw-sdk",
 			"**/cbw-sdk/**",
