refactor: rename contract to ProposalContract

--- a/apps/contracts/Cargo.toml
+++ b/apps/contracts/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = [
   "role-manager",
   "referral-contract", 
-  "proposal"
+  "proposal-contract"
 ]
 
 [workspace.dependencies]
