--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-	"name": "Harmonia DAO Management",
-	"version": "0.0.1",
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@commitlint/cli": "^19.6.1",
-		"@commitlint/config-conventional": "^19.6.0",
-		"@types/bun": "latest",
-		"husky": "^9.1.7"
-	},
-	"peerDependencies": {
-		"typescript": "^5.0.0"
-	},
-	"engines": {
-		"bun": "1.x"
-	},
-	"packageManager": "bun@1.1.20",
-	"private": true,
-	"scripts": {
-		"init": "bun install && bun run husky:prepare",
-		"husky:prepare": "husky install",
-		"format-and-lint": "biome check .",
-		"format-and-lint:fix": "biome check . --write",
-		"clean": "git clean -xdf node_modules",
-		"clean:node_modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
-		"prepare": "[ \"$VERCEL\" != \"1\" ] && husky install || echo \"Skipping husky install\"",
-		"contracts:build": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" soroban contract build",
-		"contracts:optimize": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" soroban contract optimize",
-		"contracts:deploy": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" soroban contract deploy",
-		"contracts:test": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" cargo test --target wasm32-unknown-unknown"
-	},
-	"workspaces": {
-		"packages": ["apps/*", "services/*", "packages/*"],
-		"nohoist": [
-			"**/cbw-sdk",
-			"**/cbw-sdk/**",
-			"**/wagmi",
-			"**/pino-pretty",
-			"**/wagmi/**",
-			"**/pino-pretty/**"
-		]
-	},
-	"dependencies": {
-		"@creit.tech/stellar-wallets-kit": "^1.7.3"
-	}
+  "name": "Harmonia DAO Management",
+  "version": "0.0.1",
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@types/bun": "latest",
+    "husky": "^9.1.7"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "engines": {
+    "bun": "1.x"
+  },
+  "packageManager": "bun@1.1.20",
+  "private": true,
+  "scripts": {
+    "init": "bun install && bun run husky:prepare",
+    "husky:prepare": "husky install",
+    "format-and-lint": "biome check .",
+    "format-and-lint:fix": "biome check . --write",
+    "clean": "git clean -xdf node_modules",
+    "clean:node_modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
+    "prepare": "[ \"$VERCEL\" != \"1\" ] && husky install || echo \"Skipping husky install\"",
+    "contracts:build": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" soroban contract build",
+    "contracts:optimize": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" soroban contract optimize",
+    "contracts:deploy": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" soroban contract deploy",
+    "contracts:test": "cd apps/contracts && PATH=\"$HOME/.cargo/bin:$PATH\" cargo test --target wasm32-unknown-unknown"
+  },
+  "workspaces": {
+    "packages": ["apps/*", "services/*", "packages/*"],
+    "nohoist": [
+      "**/cbw-sdk",
+      "**/cbw-sdk/**",
+      "**/wagmi",
+      "**/pino-pretty",
+      "**/wagmi/**",
+      "**/pino-pretty/**"
+    ]
+  },
+  "dependencies": {
+    "@creit.tech/stellar-wallets-kit": "^1.7.3"
+  },
+  "module": "index.ts",
+  "type": "module"
 }
