--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 
 		"@react-three/drei": "^10.0.7",
 		"@react-three/fiber": "^9.1.2",
-		"three": "^0.176.0"
+		"three": "^0.176.0",
 
 		"@creit.tech/stellar-wallets-kit": "^1.7.3"
 
