--- a/apps/contracts/Cargo.toml
+++ b/apps/contracts/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
   "notification-router",
-  "proposal-contract"
+  "proposal-contract",
   "referral-contract", 
   "role-manager",
   "treasury",
