voting NFT contract

--- a/contracts/contracts/voting-nft/Cargo.toml
+++ b/contracts/contracts/voting-nft/Cargo.toml
@@ -10,6 +10,10 @@ doctest = false
 
 [dependencies]
 soroban-sdk = { workspace = true }
+stellar-non-fungible = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
+stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
+stellar-access-control = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
+stellar-access-control-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts"}
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
