--- a/apps/contracts/Cargo.toml
+++ b/apps/contracts/Cargo.toml
@@ -2,7 +2,8 @@
 resolver = "2"
 members = [
   "role-manager",
-  "referral-contract", 
+  "referral-contract",
+  "member-registry",
   "proposal-contract"
 ]
 
