--- a/apps/contracts/Cargo.toml
+++ b/apps/contracts/Cargo.toml
@@ -1,12 +1,13 @@
 [workspace]
 resolver = "2"
 members = [
+  "member-registry",
   "notification-router",
-  "referral-contract", 
+  "proposal-contract",
+  "referral-contract",
   "role-manager",
   "treasury",
-  "member-registry",
-  "proposal-contract"
+  "voting-nft"
 ]
 
 [workspace.dependencies]
