feat: implement dispute resolution system for DAOs (#64)
- Add complete dispute resolution smart contract with arbitration system
- Implement dispute lifecycle management (raise, arbitrate, resolve)
- Add arbitrator volunteering and reputation tracking system
- Include comprehensive penalty system with validation (-10k to +10k units)
- Implement security features: access control, emergency pause, conflict prevention
- Add modular architecture with separate modules for disputes, arbitrators, and resolutions
- Include 11 comprehensive unit tests covering all functionality
- Add professional development tooling (Makefile with 20+ commands)
- Provide complete documentation with API examples and architecture guide
- Support member registry integration for authentication
- Include audit trails and transparency features for all operations

Technical highlights:
- Zero compilation warnings with professional Rust/Soroban patterns
- Comprehensive input validation and error handling
- Storage optimization with separate dispute and resolution storage
- Constants module for configurable parameters
- Professional documentation with usage examples

Closes #64

--- a/apps/contracts/Cargo.toml
+++ b/apps/contracts/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+  "dispute-resolution-contract",
   "member-registry",
   "notification-router",
   "proposal-contract",
