chore: configure Drizzle ORM with Supabase

--- a/services/supabase/.env.sample
+++ b/services/supabase/.env.sample
@@ -1,2 +1,6 @@
-# Copy as it is to .env file
+# Supabase project ID
+# This ID identifies your local Supabase project
 SUPABASE_PROJECT_ID=harmonia-project-db
+
+# PostgreSQL connection string used by Drizzle ORM
+DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
