--- a/apps/webapp/tsconfig.json
+++ b/apps/webapp/tsconfig.json
@@ -19,7 +19,8 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./*"],
+			"@packages/lib/*": ["../../packages/lib/src/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
