--- a/apps/contracts/Cargo.toml
+++ b/apps/contracts/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+  "delegation-contract",
   "dispute-resolution-contract",
   "member-registry",
   "notification-router",
