--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 apps/contracts/proposal-contract/test_snapshots
+test_snapshots/
 
 # Caches
 
