--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-tooltip": "^1.2.4",
 		"@react-three/drei": "^10.0.7",
 		"@react-three/fiber": "^9.1.2",
+		"@tanstack/react-query": "^5.81.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.9.2",
