--- a/apps/webapp/.env.sample
+++ b/apps/webapp/.env.sample
@@ -6,3 +6,4 @@ NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=supabase-service-key
 STELLAR_NETWORK_URL=stellar-network-url
+NEXT_PUBLIC_API_KEY=
