--- a/apps/webapp/.env.sample
+++ b/apps/webapp/.env.sample
@@ -6,3 +6,8 @@ NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=supabase-service-key
 STELLAR_NETWORK_URL=stellar-network-url
+
+# Soroban Contract Configuration
+NEXT_PUBLIC_CONTRACT_ID_PROPOSAL=CCDMXLZ5626PNGNCIYWK5OQ6YSU3FYSIOET6TIZULVDCFVKR7GLHJBRXA
+NEXT_PUBLIC_STELLAR_NETWORK=testnet
+NEXT_PUBLIC_SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
