--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -19,11 +19,12 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.4",
-		"@radix-ui/react-toast": "^1.2.6",
 		"@radix-ui/react-tooltip": "^1.2.4",
 		"@react-three/drei": "^10.0.7",
 		"@react-three/fiber": "^9.1.2",
+		"@stellar/stellar-sdk": "14.0.0-rc.3",
 		"@tanstack/react-query": "^5.81.5",
+		"buffer": "^6.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.9.2",
