--- a/apps/webapp/.env.sample
+++ b/apps/webapp/.env.sample
@@ -8,6 +8,9 @@ SUPABASE_SERVICE_ROLE_KEY=supabase-service-key
 STELLAR_NETWORK_URL=stellar-network-url
 
 # Soroban Contract Configuration
+# Example contract deployed on Stellar testnet (replace with your own if needed)
 NEXT_PUBLIC_CONTRACT_ID_PROPOSAL=CDMXLZ5626PNGNCIYWK5OQ6YSU3FYSIOET6TIZULVDCFVKR7GLHJBRXA
+# Stellar network to use: testnet | futurenet | mainnet
 NEXT_PUBLIC_STELLAR_NETWORK=testnet
+# Soroban RPC endpoint for the selected network
 NEXT_PUBLIC_SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
