--- a/services/stellar-wallet/.prettierrc.json
+++ b/services/stellar-wallet/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-	"semi": true,
+	"semi": false,
 	"singleQuote": true,
 	"tabWidth": 2,
+	"useTabs": true,
 	"trailingComma": "es5",
 	"printWidth": 100,
 	"endOfLine": "lf"
