--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -8,8 +8,10 @@
 	},
 	"scripts": {
 		"test": "jest --passWithNoTests",
-		"lint": "eslint . --ext .ts,.tsx",
-		"format": "prettier --write \"**/*.{ts,tsx}\""
+		"lint": "eslint . --ext .ts",
+		"format": "prettier --write .",
+		"build": "tsc",
+		"start": "npm run build && node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
