--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -2,22 +2,23 @@
 	"name": "stellar-wallet",
 	"version": "1.0.0",
 	"main": "src/index.ts",
-	"type": "module",
 	"directories": {
 		"test": "tests"
 	},
 	"scripts": {
+		"dev": "nodemon",
+		"build": "tsc",
+		"start": "npm run build && node dist/index.js",
 		"test": "jest --passWithNoTests",
 		"lint": "eslint . --ext .ts",
-		"format": "prettier --write .",
-		"build": "tsc",
-		"start": "npm run build && node dist/index.js"
+		"format": "prettier --write ."
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "Stellar wallet service for managing accounts and transactions",
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/node": "^24.1.0",
 		"@typescript-eslint/eslint-plugin": "^8.38.0",
@@ -26,8 +27,16 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.3",
 		"jest": "^30.0.5",
+		"jiti": "^2.5.1",
+		"nodemon": "^3.1.10",
 		"prettier": "^3.6.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.1",
+		"express": "^5.1.0",
+		"zod": "^4.0.11"
 	}
 }
