--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -1,60 +1,67 @@
 {
-  "name": "webapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "biome check",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.2.4",
-    "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^9.1.2",
-    "@stellar/stellar-sdk": "14.0.0-rc.3",
-    "@tanstack/react-query": "^5.81.5",
-    "@trustless-work/escrow": "^2.0.1",
-    "buffer": "^6.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.9.2",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.7",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.1",
-    "recharts": "^2.15.3",
-    "sonner": "^2.0.6",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.176.0",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "husky": "^9.1.7",
-    "pino-pretty": "^13.0.0",
-    "postcss": "^8",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "webapp",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome check",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@creit.tech/stellar-wallets-kit": "^1.7.7",
+		"@hookform/resolvers": "^5.0.1",
+		"@next/swc-wasm-nodejs": "^15.4.4",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.12",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-switch": "^1.2.2",
+		"@radix-ui/react-tabs": "^1.1.4",
+		"@radix-ui/react-tooltip": "^1.2.4",
+		"@react-three/drei": "^10.0.7",
+		"@react-three/fiber": "^9.1.2",
+		"@stellar/stellar-sdk": "14.0.0-rc.3",
+		"@tanstack/react-query": "^5.81.5",
+		"@trustless-work/escrow": "^2.0.1",
+		"buffer": "^6.0.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.9.2",
+		"lucide-react": "^0.475.0",
+		"next": "15.1.7",
+		"next-themes": "^0.4.6",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.1",
+		"recharts": "^2.15.3",
+		"sonner": "^2.0.6",
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.176.0",
+		"zod": "^3.24.3"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@testing-library/jest-dom": "^6.6.4",
+		"@testing-library/react": "^16.3.0",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@vitejs/plugin-react": "^4.7.0",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.7",
+		"husky": "^9.1.7",
+		"jsdom": "^26.1.0",
+		"pino-pretty": "^13.0.0",
+		"postcss": "^8",
+		"prettier": "^3.5.3",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5",
+		"vitest": "^3.2.4"
+	}
 }
