--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"dependencies": {
 		"@creit.tech/stellar-wallets-kit": "^1.7.3",
+		"@next/swc-wasm-nodejs": "^15.4.4",
 		"@next/third-parties": "^15.3.1",
 		"@react-three/drei": "^10.0.7",
 		"@react-three/fiber": "^9.1.2",
