--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -9,7 +9,7 @@
 		"dev": "nodemon",
 		"build": "tsc",
 		"start": "npm run build && node dist/index.js",
-		"test": "jest --passWithNoTests",
+		"test": "jest --coverage",
 		"lint": "eslint . --ext .ts",
 		"format": "prettier --write ."
 	},
@@ -34,9 +34,12 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@types/jest": "^30.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
+		"stellar-sdk": "^13.3.0",
+		"ts-jest": "^29.4.0",
 		"zod": "^4.0.11"
 	}
 }
