--- a/services/stellar-wallet/tsconfig.json
+++ b/services/stellar-wallet/tsconfig.json
@@ -9,6 +9,6 @@
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true
 	},
-	"exclude": ["node_modules", "dist", "coverage", "tests/**/*.test.ts", "jest.config.ts"],
+	"exclude": ["node_modules", "dist", "coverage", "tests/**/*.test.ts", "jest.config.js"],
 	"include": ["src/**/*.ts"]
 }
