--- a/services/stellar-wallet/.prettierrc.json
+++ b/services/stellar-wallet/.prettierrc.json
@@ -3,7 +3,7 @@
 	"singleQuote": true,
 	"tabWidth": 2,
 	"useTabs": true,
-	"trailingComma": "es5",
+	"trailingComma": "all",
 	"printWidth": 100,
 	"endOfLine": "lf"
 }
