--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -6,10 +6,10 @@
 		"test": "tests"
 	},
 	"scripts": {
-		"dev": "nodemon",
+		"dev": "cross-env NODE_ENV=development nodemon",
 		"build": "tsc",
 		"start": "npm run build && node dist/index.js",
-		"test": "jest --coverage",
+		"test": "cross-env NODE_ENV=test jest --coverage",
 		"lint": "eslint . --ext .ts",
 		"format": "prettier --write ."
 	},
@@ -24,6 +24,7 @@
 		"@types/node": "^24.1.0",
 		"@typescript-eslint/eslint-plugin": "^8.38.0",
 		"@typescript-eslint/parser": "^8.38.0",
+		"cross-env": "^10.0.0",
 		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.3",
@@ -31,7 +32,7 @@
 		"jiti": "^2.5.1",
 		"nodemon": "^3.1.10",
 		"prettier": "^3.6.2",
-		"ts-jest": "^29.4.0",
+		"ts-jest": "^29.4.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
 	},
@@ -40,6 +41,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
+		"sqlite3": "^5.1.7",
 		"zod": "^4.0.11"
 	}
 }
