--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -38,10 +38,12 @@
 	},
 	"dependencies": {
 		"@stellar/stellar-sdk": "^14.0.0-rc.3",
+		"@types/supertest": "^6.0.3",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
 		"sqlite3": "^5.1.7",
-		"zod": "^4.0.11"
+		"supertest": "^7.1.4",
+		"zod": "^4.1.1"
 	}
 }
