--- a/services/stellar-wallet/.env.example
+++ b/services/stellar-wallet/.env.example
@@ -1,6 +1,6 @@
 # Horizon endpoint for the Stellar network
 HORIZON_URL=https://horizon-testnet.stellar.org
 # Soroban RPC endpoint (futurenet/testnet)
-SOROBAN_RPC_URL=https://rpc-futura.stellar.org
+SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
 # Port for the local Express server
 PORT=3001
