feat: add aes-256-gcm encryption helpers

--- a/services/stellar-wallet/.env.example
+++ b/services/stellar-wallet/.env.example
@@ -4,3 +4,5 @@ HORIZON_URL=https://horizon-testnet.stellar.org
 SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
 # Port for the local Express server
 PORT=3001
+# 32-byte encryption key for AES-256-GCM
+ENCRYPTION_KEY=
