--- a/services/stellar-wallet/.env.example
+++ b/services/stellar-wallet/.env.example
@@ -6,3 +6,7 @@ SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
 PORT=3001
 # 32-byte encryption key for AES-256-GCM
 ENCRYPTION_KEY=
+
+# Rate limiting settings
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
