--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -42,6 +42,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
+		"express-rate-limit": "^8.1.0",
 		"sqlite3": "^5.1.7",
 		"supertest": "^7.1.4",
 		"zod": "^4.1.1"
