--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	},
 	"dependencies": {
 		"@creit.tech/stellar-wallets-kit": "^1.7.3",
+		"@epic-web/invariant": "^1.0.0",
 		"@next/swc-wasm-nodejs": "^15.4.4",
 		"@next/third-parties": "^15.3.1",
 		"@react-three/drei": "^10.0.7",
