--- a/services/stellar-wallet/.env.example
+++ b/services/stellar-wallet/.env.example
@@ -10,3 +10,6 @@ ENCRYPTION_KEY=
 # Rate limiting settings
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=100
+
+STELLAR_SECRET_KEY=SXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+SOROBAN_CONTRACT_ID=CXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
