implement jwt authentication

--- a/services/stellar-wallet/.env.example
+++ b/services/stellar-wallet/.env.example
@@ -1,15 +1,15 @@
-# Horizon endpoint for the Stellar network
+# Server Configuration
+PORT=3000
+
+# Stellar Network Configuration
 HORIZON_URL=https://horizon-testnet.stellar.org
-# Soroban RPC endpoint (futurenet/testnet)
 SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
-# Port for the local Express server
-PORT=3001
-# 32-byte encryption key for AES-256-GCM
-ENCRYPTION_KEY=
 
-# Rate limiting settings
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX=100
+# Stellar Account Configuration
+STELLAR_SECRET_KEY=your_stellar_secret_key_here
 
-STELLAR_SECRET_KEY=SXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-SOROBAN_CONTRACT_ID=CXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# Soroban Contract Configuration
+SOROBAN_CONTRACT_ID=your_soroban_contract_id_here
+
+# JWT Authentication
+JWT_SECRET=your_secure_jwt_secret_key_at_least_32_characters_long
