--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -37,6 +37,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@simplewebauthn/server": "^13.2.1",
 		"@stellar/stellar-sdk": "^14.0.0-rc.3",
 		"@types/supertest": "^6.0.3",
 		"cors": "^2.8.5",
