feat: add logging

--- a/services/stellar-wallet/.env.example
+++ b/services/stellar-wallet/.env.example
@@ -13,3 +13,4 @@ RATE_LIMIT_MAX=100
 
 STELLAR_SECRET_KEY=SXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 SOROBAN_CONTRACT_ID=CXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+LOG_LEVEL=info
