--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -10,7 +10,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
-		"@creit.tech/stellar-wallets-kit": "^1.7.7",
+		"@creit.tech/stellar-wallets-kit": "^0.6.1",
 		"@hookform/resolvers": "^5.0.1",
 		"@next/swc-wasm-nodejs": "^15.4.4",
 		"@radix-ui/react-avatar": "^1.1.3",
@@ -32,9 +32,10 @@
 		"buffer": "^6.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"drizzle-kit": "0.18.1",
 		"framer-motion": "^12.9.2",
 		"lucide-react": "^0.475.0",
-		"next": "15.1.7",
+		"next": "^15.5.4",
 		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
