--- a/services/stellar-wallet/package.json
+++ b/services/stellar-wallet/package.json
@@ -21,7 +21,7 @@
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/jest": "^30.0.0",
-		"@types/node": "^24.1.0",
+		"@types/node": "^24.7.0",
 		"@typescript-eslint/eslint-plugin": "^8.38.0",
 		"@typescript-eslint/parser": "^8.38.0",
 		"cross-env": "^10.0.0",
@@ -37,6 +37,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@simplewebauthn/server": "^13.2.2",
 		"@stellar/stellar-sdk": "^14.0.0-rc.3",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/supertest": "^6.0.3",
@@ -48,6 +49,7 @@
 		"sqlite3": "^5.1.7",
 		"supertest": "^7.1.4",
 		"winston": "3.18.3",
+		"yn": "^5.1.0",
 		"zod": "^4.1.1"
 	}
 }
