--- a/services/supabase/package.json
+++ b/services/supabase/package.json
@@ -25,13 +25,14 @@
 	"author": "harmonia",
 	"license": "MIT",
 	"devDependencies": {
-		"drizzle-kit": "^0.31.4",
+		"drizzle-kit": "^0.18.1",
 		"supabase": "^2.0.0",
 		"supabase-to-zod": "^1.0.7"
 	},
 	"dependencies": {
 		"dotenv": "^17.0.1",
 		"drizzle-orm": "^0.44.2",
+		"next": "15.5.4",
 		"postgres": "^3.4.7"
 	}
 }
